Create a dedicated dto for feature flags